fix: explicit CORS origin from env var to fix NS_BINDING_ABORTED on Vercel→Render